# customer-churn-prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: README.md  customer_churn.csv
model/: README.md
notebook/notebook/: README.md
src/churn_prediction/: cli.py  config.py  data.py  features.py  model.py
tests/: test_features.py
